--- a/profile.html
+++ b/profile.html
@@ -262,12 +262,10 @@
                         <div class="tw-mx-auto tw-max-w-screen-md tw-text-center tw-mb-8 lg:tw-mb-12">
                             <h2 class="tw-mb-4 tw-text-4xl tw-tracking-tight tw-font-extrabold tw-text-gray-900 dark:tw-text-white">Subscription Plans Available</h2>
                         </div>
-                        <!-- Remplacer space-y-8 et lg:space-y-0 par flex et flex-wrap pour affichage côte à côte -->
                         <div class="tw-flex tw-flex-row tw-flex-wrap tw-justify-center tw-gap-6">
                             <!-- Pricing Card -->
-                            <div class="tw-flex tw-flex-col tw-p-6 tw-max-w-lg tw-text-center tw-text-gray-900 tw-bg-white tw-rounded-lg tw-border tw-border-gray-100 tw-shadow dark:tw-border-gray-600 xl:tw-p-8 dark:tw-bg-gray-800 dark:tw-text-white">
+                            <div class="tw-flex tw-flex-col tw-p-6 tw-max-w-md tw-text-center tw-text-gray-900 tw-bg-white tw-rounded-lg tw-border tw-border-gray-100 tw-shadow dark:tw-border-gray-600 xl:tw-p-8 dark:tw-bg-gray-800 dark:tw-text-white">
                                 <h3 class="tw-mb-4 tw-text-2xl tw-font-semibold">Beta</h3>
-                                <p class="tw-font-light tw-text-gray-500 sm:tw-text-lg dark:tw-text-gray-400">Best option for personal use & for your next project.</p>
                                 <div class="tw-flex tw-justify-center tw-items-baseline tw-my-8">
                                     <span class="tw-mr-2 tw-text-5xl tw-font-extrabold">$0</span>
                                     <span class="tw-text-gray-500 dark:tw-text-gray-400">/month</span>
@@ -303,9 +301,8 @@
                                 <a href="#" class="tw-text-white tw-bg-primary-600 hover:tw-bg-primary-700 focus:tw-ring-4 focus:tw-ring-primary-200 tw-font-medium tw-rounded-lg tw-text-sm tw-px-5 tw-py-2.5 tw-text-center dark:tw-text-white dark:focus:tw-ring-primary-900">Get started</a>
                             </div>
                             <!-- Pricing Card -->
-                            <div class="tw-flex tw-flex-col tw-p-6 tw-max-w-lg tw-text-center tw-text-gray-900 tw-bg-white tw-rounded-lg tw-border tw-border-gray-100 tw-shadow dark:tw-border-gray-600 xl:tw-p-8 dark:tw-bg-gray-800 dark:tw-text-white">
+                            <div class="tw-flex tw-flex-col tw-p-6 tw-max-w-md tw-text-center tw-text-gray-900 tw-bg-white tw-rounded-lg tw-border tw-border-gray-100 tw-shadow dark:tw-border-gray-600 xl:tw-p-8 dark:tw-bg-gray-800 dark:tw-text-white">
                                 <h3 class="tw-mb-4 tw-text-2xl tw-font-semibold">Gold</h3>
-                                <p class="tw-font-light tw-text-gray-500 sm:tw-text-lg dark:tw-text-gray-400">Best option for personal use & for your next project.</p>
                                 <div class="tw-flex tw-justify-center tw-items-baseline tw-my-8">
                                     <span class="tw-mr-2 tw-text-5xl tw-font-extrabold">$19.99</span>
                                     <span class="tw-text-gray-500 dark:tw-text-gray-400">/month</span>
@@ -341,9 +338,8 @@
                                 <a href="#" class="tw-text-white tw-bg-primary-600 hover:tw-bg-primary-700 focus:tw-ring-4 focus:tw-ring-primary-200 tw-font-medium tw-rounded-lg tw-text-sm tw-px-5 tw-py-2.5 tw-text-center dark:tw-text-white dark:focus:tw-ring-primary-900">Get started</a>
                             </div>
                             <!-- Pricing Card -->
-                            <div class="tw-flex tw-flex-col tw-p-6 tw-max-w-lg tw-text-center tw-text-gray-900 tw-bg-white tw-rounded-lg tw-border tw-border-gray-100 tw-shadow dark:tw-border-gray-600 xl:tw-p-8 dark:tw-bg-gray-800 dark:tw-text-white">
-                                <h3 class="tw-mb-4 tw-text-2xl tw-font-semibold">Beta</h3>
-                                <p class="tw-font-light tw-text-gray-500 sm:tw-text-lg dark:tw-text-gray-400">Best option for personal use & for your next project.</p>
+                            <div class="tw-flex tw-flex-col tw-p-6 tw-max-w-md tw-text-center tw-text-gray-900 tw-bg-white tw-rounded-lg tw-border tw-border-gray-100 tw-shadow dark:tw-border-gray-600 xl:tw-p-8 dark:tw-bg-gray-800 dark:tw-text-white">
+                                <h3 class="tw-mb-4 tw-text-2xl tw-font-semibold">Platinum</h3>
                                 <div class="tw-flex tw-justify-center tw-items-baseline tw-my-8">
                                     <span class="tw-mr-2 tw-text-5xl tw-font-extrabold">$99.99</span>
                                     <span class="tw-text-gray-500 dark:tw-text-gray-400">/month</span>
