--- a/profile.html
+++ b/profile.html
@@ -266,7 +266,7 @@
                             <!-- Pricing Card -->
                             <div class="tw-flex tw-flex-col tw-p-6 tw-max-w-md tw-text-center tw-text-gray-900 tw-bg-white tw-rounded-lg tw-border tw-border-gray-100 tw-shadow dark:tw-border-gray-600 xl:tw-p-8 dark:tw-bg-gray-800 dark:tw-text-white">
                                 <h3 class="tw-mb-4 tw-text-2xl tw-font-semibold">Beta</h3>
-                                <div class="tw-flex tw-justify-center tw-items-baseline tw-my-8">
+                                <div class="tw-mb-4 tw-flex tw-justify-center tw-items-baseline tw-my-8">
                                     <span class="tw-mr-2 tw-text-5xl tw-font-extrabold">$0</span>
                                     <span class="tw-text-gray-500 dark:tw-text-gray-400">/month</span>
                                 </div>
@@ -303,7 +303,7 @@
                             <!-- Pricing Card -->
                             <div class="tw-flex tw-flex-col tw-p-6 tw-max-w-md tw-text-center tw-text-gray-900 tw-bg-white tw-rounded-lg tw-border tw-border-gray-100 tw-shadow dark:tw-border-gray-600 xl:tw-p-8 dark:tw-bg-gray-800 dark:tw-text-white">
                                 <h3 class="tw-mb-4 tw-text-2xl tw-font-semibold">Gold</h3>
-                                <div class="tw-flex tw-justify-center tw-items-baseline tw-my-8">
+                                <div class="tw-mb-4 tw-flex tw-justify-center tw-items-baseline tw-my-8">
                                     <span class="tw-mr-2 tw-text-5xl tw-font-extrabold">$19.99</span>
                                     <span class="tw-text-gray-500 dark:tw-text-gray-400">/month</span>
                                 </div>
@@ -340,7 +340,7 @@
                             <!-- Pricing Card -->
                             <div class="tw-flex tw-flex-col tw-p-6 tw-max-w-md tw-text-center tw-text-gray-900 tw-bg-white tw-rounded-lg tw-border tw-border-gray-100 tw-shadow dark:tw-border-gray-600 xl:tw-p-8 dark:tw-bg-gray-800 dark:tw-text-white">
                                 <h3 class="tw-mb-4 tw-text-2xl tw-font-semibold">Platinum</h3>
-                                <div class="tw-flex tw-justify-center tw-items-baseline tw-my-8">
+                                <div class="tw-mb-4 tw-flex tw-justify-center tw-items-baseline tw-my-8">
                                     <span class="tw-mr-2 tw-text-5xl tw-font-extrabold">$99.99</span>
                                     <span class="tw-text-gray-500 dark:tw-text-gray-400">/month</span>
                                 </div>
