--- a/profile.html
+++ b/profile.html
@@ -298,7 +298,7 @@
                                         <span>Free updates: <span class="tw-font-semibold">6 months</span></span>
                                     </li>
                                 </ul>
-                                <a href="#" class="tw-text-white tw-bg-primary-600 hover:tw-bg-primary-700 focus:tw-ring-4 focus:tw-ring-primary-200 tw-font-medium tw-rounded-lg tw-text-sm tw-px-5 tw-py-2.5 tw-text-center dark:tw-text-white dark:focus:tw-ring-primary-900">Get started</a>
+                                <a href="#" class="tw-bg-purple-600 hover:tw-bg-purple-700 tw-text-white tw-font-medium tw-rounded-lg tw-text-sm tw-px-5 tw-py-2.5 tw-text-center tw-transition-colors tw-duration-200">Get started</a>
                             </div>
                             <!-- Pricing Card -->
                             <div class="tw-flex tw-flex-col tw-p-6 tw-max-w-md tw-text-center tw-text-gray-900 tw-bg-white tw-rounded-lg tw-border tw-border-gray-100 tw-shadow dark:tw-border-gray-600 xl:tw-p-8 dark:tw-bg-gray-800 dark:tw-text-white">
@@ -335,7 +335,7 @@
                                         <span>Free updates: <span class="tw-font-semibold">6 months</span></span>
                                     </li>
                                 </ul>
-                                <a href="#" class="tw-text-white tw-bg-primary-600 hover:tw-bg-primary-700 focus:tw-ring-4 focus:tw-ring-primary-200 tw-font-medium tw-rounded-lg tw-text-sm tw-px-5 tw-py-2.5 tw-text-center dark:tw-text-white dark:focus:tw-ring-primary-900">Get started</a>
+                                <a href="#" class="tw-bg-purple-600 hover:tw-bg-purple-700 tw-text-white tw-font-medium tw-rounded-lg tw-text-sm tw-px-5 tw-py-2.5 tw-text-center tw-transition-colors tw-duration-200">Get started</a>
                             </div>
                             <!-- Pricing Card -->
                             <div class="tw-flex tw-flex-col tw-p-6 tw-max-w-md tw-text-center tw-text-gray-900 tw-bg-white tw-rounded-lg tw-border tw-border-gray-100 tw-shadow dark:tw-border-gray-600 xl:tw-p-8 dark:tw-bg-gray-800 dark:tw-text-white">
@@ -372,7 +372,7 @@
                                         <span>Free updates: <span class="tw-font-semibold">6 months</span></span>
                                     </li>
                                 </ul>
-                                <a href="#" class="tw-text-white tw-bg-primary-600 hover:tw-bg-primary-700 focus:tw-ring-4 focus:tw-ring-primary-200 tw-font-medium tw-rounded-lg tw-text-sm tw-px-5 tw-py-2.5 tw-text-center dark:tw-text-white dark:focus:tw-ring-primary-900">Get started</a>
+                                <a href="#" class="tw-bg-purple-600 hover:tw-bg-purple-700 tw-text-white tw-font-medium tw-rounded-lg tw-text-sm tw-px-5 tw-py-2.5 tw-text-center tw-transition-colors tw-duration-200">Get started</a>
                             </div>
                         </div>
                     </div>
